# eltariff-ai-api

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  fly.toml  package-lock.json  package.json  pyproject.toml  tailwind.config.js
data/results/: 2unxxgc6.json  6s83diec.json  93kxht4f.json  db6cjm4m.json  egj3yqbh.json  kvi5pnd9.json  peu2efvd.json  xszp3rep.json
src/eltariff/: __init__.py  main.py
src/eltariff/api/: explore.py  generate.py  parse.py  results.py
src/eltariff/models/: input.py  rise_schema.py
src/eltariff/services/: ai_parser.py  api_generator.py  pdf_parser.py  storage.py  tariff_guard.py  url_scraper.py
src/eltariff/static/styles/: app.css  tailwind.css
src/eltariff/templates/: Dockerfile.j2  docker-compose.yml.j2  explorer.html  fastapi_app.py.j2  index.html  instructions.md.j2
